# powerpoint-engine-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml
src/powerpoint_engine/: __init__.py  client.py  exceptions.py
