[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "powerpoint-engine-api"
version = "2.0.0"
description = "Python SDK for the PowerPoint Engine API - generate, edit, merge and PDF-convert PowerPoint decks over HTTP"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "PowerPoint Engine API", email = "support@powerpointengine.io"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Office Suites",
]
keywords = ["powerpoint", "pptx", "presentation", "api", "sdk", "markdown", "pdf"]
dependencies = [
    "requests>=2.25.0",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://powerpointengine.io"
Documentation = "https://powerpointengine.io/docs"
Repository = "https://github.com/powerpoint-engine-api/powerpoint-engine-python"
"Bug Tracker" = "https://github.com/powerpoint-engine-api/powerpoint-engine-python/issues"

[tool.setuptools.packages.find]
where = ["src"]
